# astre

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  Doxyfile  README.md
editor/: CMakeLists.txt
editor/include/: astre_editor.hpp
editor/modules/: CMakeLists.txt
editor/modules/Action/: CMakeLists.txt
editor/modules/Action/include/action/: action.hpp  action_interface.hpp  action_stack.hpp
editor/modules/Controller/: CMakeLists.txt
editor/modules/Controller/include/controller/: controller.hpp  editor_fly_camera.hpp  selection_controller.hpp  selection_overlay_controller.hpp  translate_controller.hpp  translate_overlay_controller.hpp  viewport_entity_picker.hpp
editor/modules/Controller/src/: controller.cpp  editor_fly_camera.cpp
editor/modules/Layout/: CMakeLists.txt
editor/modules/Layout/include/layout/: layout.hpp
editor/modules/Layout/src/: layout.cpp
editor/modules/Model/: CMakeLists.txt
editor/modules/Model/include/model/: chunk_entities_registry.hpp  model.hpp  panel_draw_context.hpp  world_snapshot.hpp
editor/modules/Panel/: CMakeLists.txt
editor/modules/Panel/include/panel/: assets_panel.hpp  main_menu_bar.hpp  panel.hpp  panel_draw_context.hpp  panel_interface.hpp  properties_panel.hpp  scene_panel.hpp  viewport_panel.hpp
editor/modules/Panel/src/: assets_panel.cpp  main_menu_bar.cpp  panel.cpp  properties_panel.cpp  scene_panel.cpp  viewport_panel.cpp
editor/modules/Widget/: CMakeLists.txt
editor/modules/Widget/include/widget/: widget.hpp  widget_interface.hpp
editor/modules/Widget/src/: widget.cpp
editor/modules/Widget/src/components/: transform_properties_widget.cpp
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: astre.hpp
engine/modules/: CMakeLists.txt  README.md
engine/modules/Asset/: CMakeLists.txt  README.md
engine/modules/Asset/include/asset/: asset.hpp  asset_cache.hpp  asset_streamer.hpp  component_loader.hpp  component_serializer.hpp  concepts.hpp  entity_loader.hpp  entity_serializer.hpp  importers.hpp  mesh_streamer.hpp  resource_tracker.hpp  script_streamer.hpp  shader_streamer.hpp  world_streamer.hpp
engine/modules/Asset/src/: asset.cpp  component_loader.cpp  component_serializer.cpp  entity_loader.cpp  entity_serializer.cpp  importers.cpp  resource_tracker.cpp  world_streamer.cpp
engine/modules/Async/: CMakeLists.txt
engine/modules/Async/include/async/: async.hpp
engine/modules/Async/src/: async.cpp
engine/modules/ECS/: CMakeLists.txt
engine/modules/ECS/include/ecs/: component_manager.hpp  component_type.hpp  ecs.hpp  entity.hpp  registry.hpp  (+4 more)
engine/modules/ECS/proto/: entity_definition.proto
engine/modules/ECS/src/: component_manager.cpp  ecs.cpp  entity_loader.cpp  entity_manager.cpp  entity_serializer.cpp  registry.cpp
engine/modules/Entry/: CMakeLists.txt
engine/modules/Entry/src/: entry.cpp
engine/modules/File/: CMakeLists.txt  README.md
engine/modules/File/proto/: save_archive_data.proto  world_chunk.proto
engine/modules/File/src/: mesh_file.cpp  save_archive_binary.cpp  save_archive_json.cpp  script_file.cpp  shader_file.cpp  world_file_binary.cpp  world_file_json.cpp  world_streamer.cpp
engine/modules/Formatter/: CMakeLists.txt
engine/modules/GUI/: CMakeLists.txt
engine/modules/GUI/src/: gui.cpp
engine/modules/Input/: CMakeLists.txt
engine/modules/Input/proto/: input_event.proto
engine/modules/Input/src/: input.cpp
engine/modules/Loader/: CMakeLists.txt  README.md
engine/modules/Loader/src/: asset.cpp  chunk_loader.cpp  entity_loader.cpp  entity_serializer.cpp  mesh_loader.cpp  script_loader.cpp  shader_loader.cpp
engine/modules/Math/: CMakeLists.txt
engine/modules/Math/proto/: math.proto
engine/modules/Math/src/: math.cpp
engine/modules/Native/: CMakeLists.txt
engine/modules/Pipeline/: CMakeLists.txt
engine/modules/Pipeline/src/: debug_overlay.cpp  deferred_shading.cpp  display.cpp  gui_stats.cpp  logic_pipelines.cpp  picking.cpp  pipeline.cpp  renderer_state.cpp
engine/modules/Process/: CMakeLists.txt
engine/modules/Proto/: CMakeLists.txt
engine/modules/Proto/ECS/: CMakeLists.txt  entity_definition.proto
engine/modules/Proto/File/: CMakeLists.txt  save_archive_data.proto  world_chunk.proto  world_file_data.proto
engine/modules/Proto/Input/: CMakeLists.txt  input_event.proto
engine/modules/Proto/Math/: CMakeLists.txt  math.proto
engine/modules/Proto/Render/: CMakeLists.txt  mesh_definition.proto  shader_definition.proto
engine/modules/Proto/Script/: CMakeLists.txt  script_definition.proto
engine/modules/Render/: CMakeLists.txt
engine/modules/Render/proto/: mesh_definition.proto  shader_definition.proto
engine/modules/Render/src/: render.cpp  vertex.cpp
engine/modules/Script/: CMakeLists.txt
engine/modules/Script/src/: script.cpp
engine/modules/Type/: CMakeLists.txt
engine/modules/Version/: CMakeLists.txt  version.h.in
engine/modules/Version/src/: version.cpp
engine/modules/Window/: CMakeLists.txt
engine/modules/World/: CMakeLists.txt
engine/modules/World/proto/: save_archive_data.proto  world_chunk.proto
engine/modules/World/src/: chunk.cpp  save_archive.cpp  save_archive_binary.cpp  save_archive_json.cpp  world.cpp
engine/src/: astre.cpp
engine/tests/: CMakeLists.txt
engine/tests/include/: unit_tests.hpp
engine/tests/modules/Async/: async_tests.cpp
engine/tests/modules/File/: mesh_file_tests.cpp  save_archive_tests.cpp  world_file_tests.cpp
engine/tests/modules/Native/: native_tests.cpp
engine/tests/modules/Process/: process_tests.cpp  winapi_process_tests.cpp
engine/tests/modules/Render/: opengl_renderer_tests.cpp  opengl_shader_tests.cpp  opengl_texture_tests.cpp  opengl_vertex_buffer_tests.cpp
engine/tests/modules/Type/: type_tests.cpp
engine/tests/modules/Window/: winapi_window_tests.cpp
engine/tests/modules/World/: save_archive_tests.cpp
engine/tests/src/: unit_tests.cpp
game/: CMakeLists.txt
game/resources/worlds/levels/: level_0.json
game/resources/worlds/scripts/: camera_script.lua  player_script.lua
game/src/: main.cpp
(+149 files in other folders)
