add_subdirectory(Math)
add_subdirectory(Native)
add_subdirectory(Async)
add_subdirectory(Version)
add_subdirectory(Entry)
add_subdirectory(Type)
add_subdirectory(Formatter)
add_subdirectory(Process)
add_subdirectory(Window)
add_subdirectory(Render)
add_subdirectory(Input)
add_subdirectory(ECS)
add_subdirectory(Asset)
add_subdirectory(Pipeline)
add_subdirectory(World)
add_subdirectory(Script)